<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bangkit.letmecook.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_detailArticleFragment"
            app:destination="@id/detailArticleFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_recipe"
        android:name="com.bangkit.letmecook.ui.recipe.RecipeFragment"
        android:label="@string/title_recipe"
        tools:layout="@layout/fragment_recipe" />

    <fragment
        android:id="@+id/navigation_stock"
        android:name="com.bangkit.letmecook.ui.stock.StockFragment"
        android:label="@string/title_stock"
        tools:layout="@layout/fragment_stock" >
        <action
            android:id="@+id/action_navigation_stock_to_navigation_stock_add"
            app:destination="@id/navigation_stock_add" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.bangkit.letmecook.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_stock_add"
        android:name="com.bangkit.letmecook.ui.stock.AddStockFragment"
        android:label="@string/btn_addStock"
        tools:layout="@layout/fragment_add_stock" />
    <fragment
        android:id="@+id/detailArticleFragment"
        android:name="com.bangkit.letmecook.ui.home.DetailArticleFragment"
        android:label="fragment_detail_article"
        tools:layout="@layout/fragment_detail_article">
    <argument
        android:name="article"
        app:argType="com.bangkit.letmecook.data.response.Article"/>
    </fragment>
</navigation>