<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="130dp"
    android:layout_height="130dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginEnd="8dp"
    android:checkable="true"
    android:clickable="true"
    android:focusable="true"
    android:backgroundTint="@color/pink_50"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageStock"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            app:riv_corner_radius="12dp"
            android:src="@drawable/ic_place_holder"
            android:contentDescription="@string/iv_placeholder_card_horizontal"/>

        <TextView
            android:id="@+id/titleStock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:maxLines="1"
            android:textAlignment="center"
            android:textSize="14dp"
            android:textStyle="bold"
            android:textColor="@color/red_90k"
            tools:text="@string/txt_nameStock" />

        <TextView
            android:id="@+id/expiredDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="10sp"
            android:textStyle="bold"
            android:textColor="@color/pink_500"
            tools:text="@string/txt_expiredStock" />

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
