<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="6dp"
    android:layout_marginHorizontal="8dp"
    android:layout_gravity="center">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/item_stock_delete"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="?attr/colorError"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/item_state_card"
        app:layout_constraintBottom_toBottomOf="@id/item_state_card">

        <ImageButton
            android:id="@+id/btn_delete_stcok"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/btn_deleteStock"
            android:padding="8dp"
            android:src="@drawable/ic_proicons_delete_24dp"
            app:tint="?attr/colorOnError"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/item_state_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="?attr/colorSurface"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/item_stock_delete"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/item_stock_photo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                app:riv_corner_radius="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/item_stock_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/txt_nameStock"
                android:textStyle="bold"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintStart_toEndOf="@+id/item_stock_photo"
                app:layout_constraintTop_toTopOf="@id/item_stock_photo"
                app:layout_constraintEnd_toStartOf="@id/item_stock_edit" />

            <TableRow
                android:layout_width="0dp"
                android:layout_height="18dp"
                app:layout_constraintBottom_toTopOf="@id/item_stock_expired"
                app:layout_constraintStart_toStartOf="@id/item_stock_name">

                <TextView
                    android:text="@string/txt_inStock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorOnSurface"
                    android:layout_marginEnd="8dp"/>

                <TextView
                    android:id="@+id/item_stock_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txt_amountStock"
                    android:textColor="?attr/colorOnSurface"/>
            </TableRow>

            <TextView
                android:id="@+id/item_stock_expired"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_expiredStock"
                android:textColor="?attr/colorOnError"
                app:layout_constraintStart_toStartOf="@id/item_stock_name"
                app:layout_constraintEnd_toEndOf="@id/item_stock_name"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageButton
                android:id="@+id/item_stock_edit"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/btn_editStock"
                android:padding="8dp"
                android:src="@drawable/ic_proicons_compose_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?attr/colorOnPrimary"
                tools:ignore="TouchTargetSizeCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>