<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.DetailArticleFragment">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/arrow_back_24px"
        android:contentDescription="@string/cd_btn_back"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:tint="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tvTitleDetailArticle"/>

    <TextView
        android:id="@+id/tvTitleDetailArticle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_title_detail"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimary"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnBack" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="58dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitleDetailArticle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/newsCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/imageArticle"
                        android:layout_width="match_parent"
                        android:layout_height="220dp"
                        android:scaleType="centerCrop"
                        android:background="@drawable/ic_place_holder"
                        android:contentDescription="@string/iv_news_image_description"
                        app:riv_corner_radius="8dp" />

                    <TextView
                        android:id="@+id/titleArticle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#333333"
                        tools:text="@string/title_detail_news" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="12dp"
                        android:background="#E0E0E0" />

                    <TextView
                        android:id="@+id/descriptionArticle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textSize="12sp"
                        android:textAlignment="gravity"
                        android:textColor="?attr/colorOnBackground"
                        android:lineSpacingExtra="4dp"
                        tools:text="Description" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
